Perkin-UAT/force-app/main/default/objects/BD_Completed_Training__c/BD_Completed_Training__c.object-meta.xml
<CustomObject>
    <label>Completed Training</label>
    <nameField>
        <displayFormat>CT-{000000}</displayFormat>
        <label>Completed Training Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Completed Training</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>