Perkin-UAT/force-app/main/default/objects/BD_Completed_Training__c/fields/BD_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>BD_Completion_Date__c</fullName>
    <label>Completion Date</label>
    <type>Date</type>
</CustomField>