Perkin-UAT/force-app/main/default/objects/BD_Completed_Training__c/fields/BD_Related_Technician__c.field-meta.xml
<CustomField>
    <fullName>BD_Related_Technician__c</fullName>
    <label>Related Technician</label>
    <referenceTo>SVMXC__Service_Group_Members__c</referenceTo>
    <relationshipLabel>Completed Training</relationshipLabel>
    <relationshipName>Completed_Training</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>