Perkin-UAT/force-app/main/default/objects/BD_Completed_Training__c/fields/BD_Training_Course__c.field-meta.xml
<CustomField>
    <fullName>BD_Training_Course__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Training Course</label>
    <referenceTo>BD_Training_Course__c</referenceTo>
    <relationshipLabel>Completed Trainings</relationshipLabel>
    <relationshipName>Completed_Training</relationshipName>
    <type>Lookup</type>
</CustomField>